Updated First_AI_ML_NOtebook_Amar.ipynb with new AI/ML code

--- a/First_AI_Notebook_Amar.ipynb
+++ b/First_AI_Notebook_Amar.ipynb
@@ -1,27 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5e81ff54-a500-4040-b35f-23978d17a70f",
+   "cell_type": "raw",
+   "id": "048b8710-0ce5-428e-b1fc-8a7b5e0fdc5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, I am starting my AI/ML journey with Jupyter Notebook!\n"
-     ]
-    }
-   ],
    "source": [
     "print(\"Hello, I am starting my AI/ML journey with Jupyter Notebook!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04225613-cee6-4b86-9aa9-bf2b0e7a3e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated: I am learning AI/ML with Git!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Updated: I am learning AI/ML with Git!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bac3f6fd-319f-4265-86a5-3aedc5cb22d5",
    "metadata": {},
    "outputs": [],
    "source": []
